[metadata]
name = cipher
version = 0.0.1a
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = 
	mongoengine
	pymongo
	requests

[options.extras_require]
dev =
	black
	flake8
	pytest
reactivity = 
	graphviz
	tomli
test = pytest
