[metadata]
name = cipher_reactivity
version = 0.0.1a
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = 
	graphviz
	mongoengine
	numpy
	pymongo
	requests
	tomli

[options.package_data]
cipher_reactivity = data/*

[options.extras_require]
dev =
	black
	flake8
	pytest	
test =
	pytest
